--- a/indextest.html
+++ b/indextest.html
@@ -10,7 +10,7 @@
 <div id="wrapper">
 
 
-<! Left Side Seating Arrangement>
+<!-- Left Side Seating Arrangement-->
 
 <div class="split left">
     <div class="row">
@@ -50,7 +50,7 @@
 
 <div class="Space"></div>
 
-<!Second Set on left side>
+<!--Second Set on left side-->
     <div class="row">
         <div class="topcolumnL">
             <div id="Box13">
@@ -87,7 +87,7 @@
     </div>
 </div>
 
-<! Right Side Seating Arrangement>
+<!-- Right Side Seating Arrangement-->
 <div class="split right">
     <div class="row">
         <div class="topcolumnR">
@@ -126,7 +126,7 @@
 
     <div class="Space"></div>
 
-    <!Second Seats on the right>
+    <!--Second Seats on the right-->
     <div class="row">
         <div class="topcolumnR">
             <div id="Box20">
